# DIABETES

./: .gitignore  EmptyCELL.ipynb  EmptyCELLcsvpng.ipynb  README.md  cleancode.ipynb  code_clean.ipynb  config.py  hello.py  loquesea.ipynb  main.py  pyproject.toml  setup.py
notebooks/: Presentaion.ipynb  __init__.py  diabetes_notebook one.ipynb  diabetes_notebook two.ipynb  diabetes_notebook.ipynb  diabetes_notebook_VALID.ipynb  diabetes_notebook_five.ipynb  diabetes_notebook_for_main.ipynb  diabetes_notebook_for_main_realtest.ipynb  diabetes_notebook_for_main_realtest_progress copy.ipynb  diabetes_notebook_for_main_realtest_progress.ipynb  diabetes_notebook_for_main_realtest_progressBACKUP.ipynb  diabetes_notebook_for_main_test.ipynb  diabetes_notebook_four.ipynb  diabetes_notebook_three.ipynb  diabintel_backupfinal.ipynb  features_test.csv  finaltest.ipynb  loquesea.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
output/: overview_dataframe.csv  summary_statistics.csv
src/: experiment_runner.py  hello.py  main.py
src/data/: data_preprocessing.py  load_data.py
src/models/: classifier.py  evaluation.py  hyperparameter_tunning.py  voting.py  voting2.py
src/utils/: graphics.py  resampling.py
