[project]
name = "DIABETES"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn==0.13.2",
    "xgboost==2.1.4",
    "imbalanced-learn==0.13.0",
    "tensorflow==2.18.0"
]
